--- a/DeliveryBack/src/main/resources/application.properties
+++ b/DeliveryBack/src/main/resources/application.properties
@@ -8,6 +8,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=delivery2020.elbuensabor@gmail.com
+spring.mail.password=elbuensabor2020
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 server.port=9001
